--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,4 +1,4 @@
-!DOCTYPE HTML!
+<!DOCTYPE HTML!>
 <html>
     <head>
         <title>Hello World</title>
@@ -8,5 +8,11 @@
         <object width="400" height="400" data="hello world.swf">
         </object>
         <h1>My First Google Map</h1>
+<div id="map" style="width:400px;height:400px;background:yellow"></div>
+<div id="map"><iframe src="https://www.google.com/maps/embed?pb" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+        <script>
+
+    
+               
     </body>
 </html>
