--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,6 +12,9 @@
 <div id="map"><iframe src="https://www.google.com/maps/embed?pb" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
     <script>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/-hIc_epqfI0?start=30" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        <canvas id="myCanvas" width="200" height="100" style="border:1px solid #d3d3d3;">
+                <script>
+</script>
 
 
     
