--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -1,13 +1,15 @@
-<!DOCTYPE HTML!>
+<!DOCTYPE html>
 <html>
     <head>
         <title>Hello World</title>
     </head>
     <body>
         <h1>Hello World</h1>
-        <object width="400" height="400" data="hello world.swf">
-        </object>
-        <h1>My First Google Map</h1>
+        <iframe src="https://giphy.com/gifs/1GrsfWBDiTN60/html5" width="480" height="318" frameBorder="0"></iframe>
+        <iframe src=https://www.google.com/maps/embed?pb!1m18!1m12!1m3!1d2687.497287015647!2d-122.30570858438792!3d47.655335079187964!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549014929d8535eb%3A0x6b742c7901b82ba3!2sUniversity+of+Washington!5e0!3m2!1sen!2sus!4v1539583057339 width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>"
+        <iframe src=https://www.google.com>Google</iframe>
+    
+
 <div id="map" style="width:400px;height:400px;background:yellow"></div>
 <div id="map"><iframe src="https://www.google.com/maps/embed?pb" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></div>
     <script>
